--- a/src/components/Project/project.css
+++ b/src/components/Project/project.css
@@ -3,7 +3,6 @@
   flex-direction: column;
 
   overflow-x: hidden;
-  width: 98vw;
 }
 
 #projects h1 {
@@ -36,7 +35,6 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  gap: 30px;
 
   width: 100%;
 
@@ -48,7 +46,7 @@
 }
 
 .project--info h2 {
-  font-size: 2.6rem;
+  font-size: 2.2rem;
 }
 
 .logos--slide.project--style {
